--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "update-ip.js",
     "scripts": {
         "set-ip": "node update-ip.js",
+        "quick-start": "./quick-start.sh",
         "start": "npm run set-ip && concurrently \"npm run start:backend\" \"npm run start:frontend\"",
         "start:backend": "cd backend && npm start",
         "start:frontend": "cd frontend && npm start",
