--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 # Server Configuration
 PORT=5000
 NODE_ENV=development
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=http://10.7.183.226:3000
 
 # Session Security
 SESSION_SECRET=random-string-123456
@@ -11,7 +11,7 @@ JWT_SECRET=another-random-string-789
 MONGODB_URI=mongodb+srv://pemda_admin:ccdiRZKRLSJlqt5L@cluster0.nuegqkp.mongodb.net/pemda_dashboard?appName=Cluster0
 
 # Keycloak Configuration
-KEYCLOAK_URL=http://10.7.183.128:8080
+KEYCLOAK_URL=http://10.7.183.226:8080
 KEYCLOAK_REALM=Jogja-SSO
 KEYCLOAK_CLIENT_ID=pemda-dashboard
 KEYCLOAK_CLIENT_SECRET=uJpI5foZD6KvgzoiO32LeupPthyicNqM
