refactor: reorganize project structure
- Move utility scripts to scripts/ folder
- Move guide docs to docs/ folder
- Delete stale/orphan files (.avif, style.css, logs)
- Fix .gitignore (exclude .env, logs, node_modules)
- Remove .env files from tracking (security)
- Fix bugs: user deletion, OTP enforcement, session logout
- Fix login activity filter and stats
- Enhance password reset UI with strength indicator
- Fix stats-grid CSS for 4-column layout
- Add login-page-expired.ftl theme page

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,7 +4,7 @@ NODE_ENV=development
 
 # Keycloak Configuration
 KEYCLOAK_URL=http://10.7.183.140:8080
-KEYCLOAK_REALM=Jogja-SSO
+KEYCLOAK_REALM=PemdaSSO
 KEYCLOAK_CLIENT_ID=pemda-dashboard
 KEYCLOAK_CLIENT_SECRET=YOUR_CLIENT_SECRET_HERE
 
