--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,29 @@
-/.agent
+# Dependencies
+node_modules/
+backend/node_modules/
+frontend/node_modules/
+
+# Environment
+.env
+backend/.env
+
+# Logs
+*.log
+
+# OS
+.DS_Store
+
+# IDE
+.vscode/
+.cursor/
+
+# Build
+frontend/build/
+
+# Uploads (local dev)
+backend/uploads/
+backend/data/
+
+# Keycloak backup
+keycloak-backup/
+.agent/
