--- a/backend/package.json
+++ b/backend/package.json
@@ -25,9 +25,11 @@
     "geoip-lite": "^1.4.10",
     "jsonwebtoken": "^9.0.2",
     "keycloak-connect": "^23.0.0",
-    "mongodb": "^6.3.0",
-    "mongoose": "^8.22.1",
+    "minio": "^8.0.6",
     "multer": "^1.4.5-lts.1",
+    "pg": "^8.18.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.7",
     "ua-parser-js": "^2.0.9",
     "uuid": "^13.0.0"
   },
