--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@keycloak/keycloak-admin-client": "^23.0.0",
+    "@react-keycloak/web": "^3.4.0",
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
     "keycloak-js": "^23.0.0",
